2008-10-06  Michael Snyder  <msnyder@vmware.com>

	* infcmd.c (finish_command): Reject async in reverse.
	* infcmd.c (finish_command): Use i18n macros.
	* infcmd.c: Minor function reordering.
	* infrun.c (step_into_function): Rename to stepped_into_function.
	Split into two versions (normal (forward), and reverse).
	(handle_inferior_event): Call stepped_into_function or 
	stepped_into_function_backward, depending on exec_direction.
	* infrun.c (handle_inferior_event): Comment rewording.
	* remote.c (remote_get_exec_direction): Use i18n macros.
	(remote_set_exec_direction): Ditto.
	* infrun.c (handle_inferior_event, step_into_function): Formatting.
        * infrun.c (handle_inferior_event): Formatting, spelling fix.

	* infrun.c (handle_inferior_event): Add special case for
	"next" in reverse.

2008-10-04  Hui Zhu  <teawater@gmail.com>

	Change from "to_prepare_to_store" to "to_store_registers".
	* record.c (record_beneath_to_prepare_to_store): Removed.
	(record_beneath_to_store_registers): New function pointer.
	Instead "record_beneath_to_prepare_to_store". Will point
	to the low strata target "to_store_registers" function.
	(record_prepare_to_store): Removed.
	(record_store_registers): New function.
	Instead "record_prepare_to_store". Record the change of
	registers from GDB.
	(init_record_ops): Change record_prepare_to_store to
	record_store_registers.
	* record.h (record_beneath_to_prepare_to_store): Removed.
	(record_beneath_to_store_registers): New extern.
	* target.c (update_current_target): Change
	record_beneath_to_prepare_to_store to
	record_beneath_to_store_registers.

2008-10-05  Hui Zhu  <teawater@gmail.com>

	* infcmd.c (kill_if_already_running): If record target is used,
	output special query.
	* infrun.c (use_displaced_stepping): Return false if record/replay.
	(proceed): Do not record state changes made by gdb in 'proceed'.
	
2008-10-05  Michael Snyder  <msnyder@promb-2s-dhcp59.eng.vmware.com>
