@@ -1407,7 +1407,7 @@ finish_backward (struct symbol *function, struct thread_info *tp)
 				  bp_breakpoint);
       /* Tell the breakpoint to keep quiet.  We won't be done
          until we've done another reverse single-step.  */
-      breakpoint_silence (breakpoint);
+      make_breakpoint_silent (breakpoint);
       old_chain = make_cleanup_delete_breakpoint (breakpoint);
       proceed ((CORE_ADDR) -1, TARGET_SIGNAL_DEFAULT, 0);
       /* We will be stopped when proceed returns.  */
